bestproject2/infrastructure/kubernetes/kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ecommerce-dev
spec:
  ports:
    - port: 9092
  selector:
    app: kafka

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: ecommerce-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: wurstmeister/kafka
          ports:
            - containerPort: 9092
